--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- One -->
       <section id="one" class="spotlight style1 bottom">
         <span class="image fit main"
-          ><img src="images/pic01.png" alt=""
+          ><img src="images/home/pic01.png" alt=""
         /></span>
 
         <div class="content">
@@ -78,7 +78,7 @@
       <section id="two" class="spotlight style2 right">
         <!-- <span class="image fit main"><img src="images/pic04x.jpeg" alt="" /></span> -->
         <span class="image fit main"
-          ><img src="images/pic003.png" alt=""
+          ><img src="images/home/pic003.png" alt="iphone photo"
         /></span>
 
         <div class="content">
@@ -106,9 +106,8 @@
       <!-- Three -->
       <section id="three" class="spotlight style3 left">
         <span class="image fit main bottom"
-          ><img src="images/pic033.png" alt=""/></span>
+          ><img src="images/home/pic023.png" alt=""/></span>
 		  
-      <!-- <img src="images/pic02.jpg" alt=""/></span> -->
 
         <div class="content">
           <header>
