--- a/elements.html
+++ b/elements.html
@@ -98,7 +98,7 @@
 				<footer id="footer">
 					<ul class="icons">
 				
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<a href="https://www.linkedin.com/in/miruna-p/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a>
 					
 					<ul class="copyright">
 						<li>&copy; ORGNZ.</li>
