--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>ORGNZ</title>
+	<link rel="icon" href="./favicon.ico">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -143,7 +144,7 @@
     <footer id="footer">
       <ul class="icons">
         <li>
-          <a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a>
+          <a href="https://www.linkedin.com/in/miruna-p/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a>
         </li>
       </ul>
       <ul class="copyright">
