--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
             Do you want to know when the app is ready?
           </p>
         </header>
-        <form method="post" action="#" class="cta">
+        <form action="https://formsubmit.co/45e2f06d3f6199aaaac0e6c19db88c56" method="POST" />
+       
           <div class="row gtr-uniform gtr-50">
             <div class="col-8 col-12-xsmall">
               <input type="email" name="email" id="email" placeholder="Your Email Address" />
@@ -136,6 +137,8 @@
               <input type="submit" value="Subscribe" class="fit primary" />
             </div>
           </div>
+
+        
         </form>
       </div>
     </section>
